# benchmark-csc-rustdoc-jsons

./: Cargo.toml  README.md
benches/: read_rustdoc.rs
src/: lib.rs
