[package]
name = "benchmark-json"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.58"
trustfall_rustdoc = { version = "0.16.0", default-features = false, features = ["v28", "v29", "v30", "v32", "v33"] }
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = "0.14.0-rc.3"
trustfall-rustdoc-adapter-v28 = { package = "trustfall-rustdoc-adapter", version = ">=28.1.0,<28.2.0"}

[[bench]]
name = "read_rustdoc"
harness = false
